# PSALM

./: .gitignore  LICENSE  README.md  joint_commit.sh  psalm2-cuda.yml  psalm2.yml  pyproject.toml  test2.txt  test3.txt  tutorial.ipynb
beta_release/: R6SWH5.fasta  classifiers.py  cust.fasta  distributed_utils.py  full_requirements.yml  globin.fasta  globin.scan  hmmscan_utils.py  jenny.fasta  ml_utils.py  multi.sh  parsers.py  psalm_test.py  psalm_train.py  psalm_train_multi.py  psalm_viz.py  psalm_viz_batch.py  readme.ipynb  requirements.yml  seq.fasta  test.sh  testing.ipynb  testing.py  visualizations.py
beta_release/bash_scripts/: eval.sh  rebuild_profiles.sh  runner.sh  target_merged.sh  target_sharded.sh  train_test.sh
beta_release/examples/: Q59325.fasta
beta_release/info_files/: shard_seqs.pkl
beta_release/logs/: beta_test.err  beta_test.out  beta_train.err  beta_train.out  beta_trainfull.err  beta_trainfull.out
beta_release/py_scripts/: classifiers.py  distributed_utils.py  distributed_utils_test.py  eval.py  full_data_curation.py  ml_utils.py  parsers.py  psalm_test.py  psalm_test_multi.py  psalm_train_multi.py  target_precomputing.py  val_creator.py
beta_release/roc_data/: clan_rocs_100_100.pkl  clan_rocs_100_20.pkl  clan_rocs_100_50.pkl  clan_rocs_20_nu_20.pkl  fam_100.pkl  (+30 more)
example_fastas/: Q09870.fa
instructions/: BLAST_Test.ipynb  FilterPfam_A.ipynb  Finetune_Dataset_Creation.ipynb  FormatData.ipynb  PfamSeed_TrainTestSplit.ipynb  VisualizingMIDSmoothing.ipynb  test_split_average_pid.ipynb
protein_sequence_annotation/: README.md  setup.py
psalm/: cli.py  fast_scan.py  psalm_model.py  report.py  setup.py  shell.py  terminal_ui.py
scripts/: derive_evalue_curve.py
(+111 files in other folders)
