[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protein-sequence-annotation"
version = "2.1.8"
description = "Protein sequence domain annotation with PSALM."
readme = "README.md"
requires-python = ">=3.10"
license = "CC-BY-4.0"
license-files = ["LICENSE"]
authors = [
  { name = "Arpan Sarkar" },
  { name = "Kumaresh Krishnan" }
]
keywords = ["protein", "bioinformatics", "annotation", "transformers", "psalm"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]
dependencies = [
  "biopython>=1.85",
  "catboost>=1.2.8",
  "huggingface_hub>=0.27.0",
  "numba>=0.61.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pyyaml>=6.0.0",
  "safetensors>=0.5.0",
  "torch>=2.5.0",
  "tqdm>=4.66.0",
  "transformers>=4.48.0"
]

[project.optional-dependencies]
train = [
  "accelerate>=1.2.0",
  "datasets>=3.2.0",
  "scikit-learn>=1.4.0",
  "wandb>=0.18.0"
]
flash = [
  "faesm>=0.1.1"
]
dev = [
  "build>=1.2.2",
  "twine>=6.1.0"
]

[project.urls]
Homepage = "https://github.com/Protein-Sequence-Annotation/PSALM"

[project.scripts]
psalm-scan = "psalm.cli:main"
psalm = "psalm.shell:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["psalm", "psalm.*"]

[tool.setuptools.package-data]
psalm = ["config.yaml", "inference/warmup.fasta", "inference/evalue_curve.json"]
